NewFeature: Query Browser export proof-of-concept

--- a/common/src/main/resources/dev/openscada/rapiddevtoolsmod/common/RapidDevToolsScripts.properties
+++ b/common/src/main/resources/dev/openscada/rapiddevtoolsmod/common/RapidDevToolsScripts.properties
@@ -2,4 +2,4 @@
 
 helloWorld.desc=Returns a friendly greeting
 helloWorld.param.name=Name used in message
-hellowWorld.returns=The string "Hello name"
+helloWorld.returns=The string "Hello name"
